# writeassist-llmops

./: .gitignore  README.md  justfile  pyproject.toml
best_artifacts/8c6b3243-38c7-42bd-97c9-c41c42216f27/: run_configuration.json
best_artifacts/8c6b3243-38c7-42bd-97c9-c41c42216f27/feedback_evaluation/: results.csv
best_artifacts/8c6b3243-38c7-42bd-97c9-c41c42216f27/feedback_retrieval/: retrieval_results.csv
best_artifacts/8c6b3243-38c7-42bd-97c9-c41c42216f27/feedback_vector_store/: embeddings.parquet
best_artifacts/8c6b3243-38c7-42bd-97c9-c41c42216f27/llm_feedback/: feedback_generation.json
best_artifacts/d14c72e1-56aa-44c8-a468-d88dd3aaa02e/: run_configuration.json
best_artifacts/e2ce5dbe-6a20-4dbe-be14-92cf84f48871/: run_configuration.json
best_configs/ESSAY_CONTEXT_ABLATION/: results.csv
best_configs/PARAGRAPHS_OUTPUT_FORMAT/: feedback_generation.json
experiment/app/: main.py
experiment/app/pages/: cost_estimation.py  student_conferencing.py
experiment/design/: __init__.py  _functions.py  _models.py  treatments.py
experiment/pipeline/: __init__.py
experiment/prompt/: __init__.py  _builder.py  _directors.py  _enums.py
experiment/utils/: __init__.py
notebooks/: dev.ipynb  teacher_model_exploration.ipynb
scripts/: check_s3.py  data_simulation.py  gen_dummy_data.py  personas.py  run_mlflow.py  run_mlflow.sh
tests/: test_teacher_model.py  utils.py
tests/files/: feedback_generation.txt  feedback_generation_prompt.txt  teacher_model_base.txt  teacher_model_base_prompt.txt  teacher_model_update.txt  teacher_model_update_prompt.txt
(+32 files in other folders)
